fix(framework.less): add overflow hidden for the x axis (#18871)

--- a/src/style/foundation/framework.less
+++ b/src/style/foundation/framework.less
@@ -55,6 +55,7 @@
     position: relative;
     min-width: var(--screen-sm-min);
     flex: 1 1 auto;
+    overflow-x: hidden;
     overflow-y: auto;
 
     &__overlay {
